--- a/pages/procurement-strategy.html
+++ b/pages/procurement-strategy.html
@@ -24,7 +24,75 @@
     <main>
         <h2>Procurement Strategies for obtaining seller responses and more</h2>
 
+        <h3>Conducting procurements</h3>
+        <p>Conducting procurements is a comes under procurement management within project management. It mainly involves
+            seller responses, selecting a supplier/seller, and awarding a contract. Naturally, the primary goal of
+            conducting procurement is to obtain the necessary goods and services from a third party supplier to support
+            the needs of the project. This process includes plan procurement management, conduct procurement and control
+            procurement, all of which play a different role in conducting procurements.</p>
+        <p>Plan procurement management involves describing the projects purchasing requirements such as the criteria for
+            selection of sellers, and developing necessary documents for the process. Moreover, Conduct procurement is
+            an activity that involves evaluating the seller proposals and finally selecting a seller. Lastly, Control
+            procurement details managing the contract between the seller and monitoring seller performance and making
+            changes and actions as necessary.</p>
+        <p>The Conduct procurements process is an essential part of the project and plays an important role in the
+            project’s success. It enables the project team to gain the proper resources and services from the right
+            source to complete the project objectives. It also makes sure the project is completed on time and is within
+            the budget set forth. Furthermore, it helps to adhere to the quality standards of the project.</p>
+        <h3>Implications of obtaining seller responses</h3>
+        <p>Obtaining seller responses is an important step. Conduct Procurements process of Project Management, involves
+            reaching out to potential suppliers, sharing the project's requirements through procurement documents, and
+            receiving responses in the form of proposals or negotiations. All of which may be very important to the task
+            at hand. Indeed, project procurement management entails intricate matters that are not to be taken lightly
+            as this directly affects the project success. So how do we evaluate the proposals set forth by suppliers?
+            The proposals are evaluated based on detailed selection criteria mentioned in the procurement documents, and
+            the most suitable seller is selected and awarded the contract. Clear communication and strong documentation
+            are essential throughout the process of obtaining the right seller responses.</p>
 
+
+        <h3>Seller selection</h3>
+        <p>As a student of project management it is very important to me that I understand the details of seller
+            selection in the scope of procurement management. Indeed, it is known that seller selection is a tough
+            process that involves different facets of understanding as well as good communication and negotiation. Since
+            it affects the project success, it is important to analyze the best steps involved in performing the seller
+            analysis and selection. When it comes to selecting the right seller, the project manager must look all the
+            necessary requirements lest they miss something that ends up costing precious time and money. Therefore, we
+            must perform the correct actions to procure the right sellers, analyze them correctly and to our best
+            ability and then take action to select the best seller from among the choices. Indeed, this process may look
+            easy, but it is not. So, what does this process entail? What kind of implications does it have and what can
+            we do to make sure that we are doing this process correctly? Below is mentioned how we can complete this
+            process correctly. Please do read to find out.</p>
+
+        <h3>Awarding contracts</h3>
+        <p>At the end of negotiations between the team and the supplier, it should end in a settlement like awarding a
+            contract. The process goes something like this: we review and evaluate the proposals received then use our
+            selection criteria to analyze the proposals. Then we choose the seller that best meets our needs based on
+            our selection criteria. Then we begin negotiating the contract terms and conditions with the chosen seller.
+            Lastly, we award the contract to that seller. The contract should be clearly defined with the scope of work,
+            all deliverables, cost, time, quality standards and whatever else is relevant to the project. It is of
+            utmost importance that the contract agreement complies with all necessary legal requirements as well as
+            ethical requirements set forth. Effective contract awarding results in the project successfully receiving
+            the goods and services it needs and helps with meeting time expectations as well as budget expectations.</p>
+
+        <h3>Procurement is the process of obtaining goods or services from an external source. It is crucial to the
+            success of an IT project and involves obtaining necessary resources from third-party suppliers. The process
+            of conducting procurement includes plan procurement management, conduct procurement, and control
+            procurement. Obtaining seller responses is an essential step that involves evaluating proposals based on
+            selection criteria mentioned in procurement documents. Choosing the best seller requires creating unbiased
+            selection criteria, judging proposals fairly, and selecting the best seller based on the evaluation's
+            findings. Awarding contracts involves negotiating contract terms and conditions with the chosen seller and
+            ensuring that the contract agreement complies with legal and ethical requirements. Effective procurement
+            management ensures that the project receives the necessary goods and services on time, within budget, and
+            adhering to quality standards.</h3>
+        <h4>References:</h4>
+        <ul>
+            <li><a href="https://project-management-knowledge.com/definitions/c/conduct-procurements/">Conduct
+                    Procurements</a></li>
+            <li>Schwalbe, Kathy. “Chapter 12: Project Procurement Management.” Information Technology Project
+                Management,
+                Cengage
+                Learning, 2019. </li>
+        </ul>
 
     </main>
 
