--- a/pages/template.html
+++ b/pages/template.html
@@ -17,10 +17,20 @@
 </head>
 
 <body>
-  <div data-include="../components/header.html"></div>
-  <label for="toggle-switch">Dark Mode:</label>
-  <input type="checkbox" id="toggle-switch">
+  <header>
+    <h1>
+      <a href="/it-project-management/index.html"><img src="../images/logo.png" width="400" height="400"></a>
+    </h1>
 
+    <label for="toggle-switch">Dark Mode:</label>
+    <input type="checkbox" id="toggle-switch">
+
+    <form class="search">
+      <input class="search" type="text" placeholder="search">
+      <input type="submit" value="">
+    </form>
+  </header>
+  
   <main>
     <h2>Article Title</h2>
 
