--- a/pages/procurement-planning.html
+++ b/pages/procurement-planning.html
@@ -36,7 +36,7 @@
     <h2>Procurement Planning</h2>
     <p>By: Kaleb Dean</p>
 
-    <img src="../images/procurement-planning.png">
+    <img src="../images/procurement-planning.jpeg">
 
     <p>As a project manager, each knowledge area you are responsible for will require planning to achieve the success of the project. Procurement planning requires you to consider how procurement processes will be managed. This includes developing the documentation for making procurement decisions from companies outside of your organization as well as acquisitions to project closure. </p>
     <p>Your procurement management plan should include the following key elements:</p>
