--- a/pages/12-agile-principles.html
+++ b/pages/12-agile-principles.html
@@ -20,6 +20,17 @@
       <a href="/it-project-management/index.html"><img src="../images/logo.png" width="400" height="400"></a>
     </h1>
 
+    <div class='toggle-container'>
+      <p class='light-label'>Light</p>
+
+      <label class='switch'>
+          <input id='toggle-switch' type='checkbox'>
+          <span class='slider'></span>
+      </label>
+
+      <p class='dark-label'>Dark</p>
+    </div>
+
     <form class="search">
       <input class="search" type="text" placeholder="search">
       <input type="submit" value="">
@@ -27,6 +38,13 @@
   </header>
 
   <main>
+    <section class="search-results">
+      <h2 class="search-results">
+        </h3>
+        <button class='close-search-results'>X</button>
+        <div class="search-results"></div>
+    </section>
+    
     <h2>The 12 Principles of Agile Development</h2>
     <p>By Kaleb Dean</p>
 
