--- a/pages/risk-responses.html
+++ b/pages/risk-responses.html
@@ -19,20 +19,34 @@
 <body>
   <header>
     <h1>
-        <a href="/it-project-management/index.html"><img src="../images/logo.png" width="400" height="400"></a>
-    </h1>
+      <a href="/it-project-management/index.html"><img src="../images/logo.png" width="400" height="400"></a>    </h1>
 
-    <label for="toggle-switch">Dark Mode:</label>
-    <input type="checkbox" id="toggle-switch">
+    <div class='toggle-container'>
+      <p class='light-label'>Light</p>
+
+      <label class='switch'>
+          <input id='toggle-switch' type='checkbox'>
+          <span class='slider'></span>
+      </label>
+
+      <p class='dark-label'>Dark</p>
+    </div>
 
     <form class="search">
-        <input class="search" type="text" placeholder="search">
-        <input type="submit" value="">
+      <input class="search" type="text" placeholder="search">
+      <input type="submit" value="">
     </form>
   </header>
   
 
   <main>
+    <section class="search-results">
+      <h2 class="search-results">
+        </h3>
+        <button class='close-search-results'>X</button>
+        <div class="search-results"></div>
+    </section>
+    
     <h2>Risk Responses</h2>
     <p>By: Kaleb Dean</p>
 
