--- a/pages/use-agile.html
+++ b/pages/use-agile.html
@@ -17,8 +17,18 @@
 <body>
   <header>
     <h1>
-      <a href="/it-project-management/index.html"><img src="../images/logo.png" width="400" height="400"></a>
-    </h1>
+      <a href="/it-project-management/index.html"><img src="../images/logo.png" width="400" height="400"></a>    </h1>
+
+    <div class='toggle-container'>
+      <p class='light-label'>Light</p>
+
+      <label class='switch'>
+          <input id='toggle-switch' type='checkbox'>
+          <span class='slider'></span>
+      </label>
+
+      <p class='dark-label'>Dark</p>
+    </div>
 
     <form class="search">
       <input class="search" type="text" placeholder="search">
@@ -27,6 +37,13 @@
   </header>
 
   <main>
+    <section class="search-results">
+      <h2 class="search-results">
+        </h3>
+        <button class='close-search-results'>X</button>
+        <div class="search-results"></div>
+    </section>
+    
     <h2>When to Use or Not Use Agile</h2>
     <p>Written by Daniel Cisneros Siliezar</p>
 
