adding close button icon

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
   <main>
     <section class="search-results">
-      <h2 class="search-results">
-        </h3>
-        <button class='close-search-results'>X</button>
+      <h3 class="search-results">
+      </h3>
+        <button class="close-search-results"><i class="fa-regular fa-circle-xmark fa-xl"></i></button>
         <div class="search-results"></div>
     </section>
 
