--- a/pages/outputs-of-quality-control-process.html
+++ b/pages/outputs-of-quality-control-process.html
@@ -43,8 +43,8 @@
         <section class="search-results">
             <h3 class="search-results">
             </h3>
-              <button class='close-search-results'>X</button>
-              <div class="search-results"></div>
+            <button class="close-search-results"><i class="fa-regular fa-circle-xmark fa-xl"></i></button>
+            <div class="search-results"></div>
           </section>
 
         <h2>Exploring the Outputs of the Quality Control Process</h2>
