--- a/pages/use-agile.html
+++ b/pages/use-agile.html
@@ -40,7 +40,7 @@
     <section class="search-results">
       <h3 class="search-results">
         </h3>
-        <button class='close-search-results'>X</button>
+        <button class="close-search-results"><i class="fa-regular fa-circle-xmark fa-xl"></i></button>
         <div class="search-results"></div>
     </section>
 
