--- a/pages/procurement-software.html
+++ b/pages/procurement-software.html
@@ -42,8 +42,8 @@
         <section class="search-results">
             <h3 class="search-results">
             </h3>
-              <button class='close-search-results'>X</button>
-              <div class="search-results"></div>
+            <button class="close-search-results"><i class="fa-regular fa-circle-xmark fa-xl"></i></button>
+            <div class="search-results"></div>
           </section>
 
         <h2>Procurement software</h2>
