--- a/index.html
+++ b/index.html
@@ -47,8 +47,16 @@
         <div class="search-results"></div>
     </section>
 
+    <nav class='tab-select'>
+      <button class='tab-select selected'>All</button>
+      <button class='tab-select'>Kaleb Dean</button>
+      <button class='tab-select'>Daniel Cisneros Siliezar</button>
+      <button class='tab-select'>Irzem Ahmed</button>
+      <button class='tab-select'>Shawn Kiruba</button>
+    </nav>
+
     <section class="all-articles">
-      <h2>All Articles</h2>
+      <h2 class="all-articles">All Articles</h2>
       <div class="all-articles"></div>
     </section>
   </main>
