--- a/pages/agile-adaptive-environments.html
+++ b/pages/agile-adaptive-environments.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../styles/default.css">
     <link rel="stylesheet" type="text/css" href="../styles/article.css">
-    <link rel="stylesheet" type="text/css" href="../styles/agile-adaptive-environment.css" <script defer
-        src="../js/script.js">
+    <link rel="stylesheet" type="text/css" href="../styles/agile-adaptive-environment.css">
+    <script defer src="../js/script.js">
     </script>
     <script defer src="https://kit.fontawesome.com/bb88c945f0.js" crossorigin="anonymous"></script>
 </head>
@@ -40,10 +40,9 @@
 
     <main>
         <section class="search-results">
-            <h3 class="search-results">
-            </h3>
-            <button class="close-search-results"><i class="fa-regular fa-circle-xmark fa-xl"></i></button>
-            <div class="search-results"></div>
+            <h3 class="search-results"></h3>
+              <button class="close-search-results"><i class="fa-regular fa-circle-xmark fa-xl"></i></button>
+              <div class="search-results"></div>
           </section>
 
         <h2>Agile and Adaptive Environments</h2>
