--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="./styles/default.css">
   <link rel="stylesheet" type="text/css" href="./styles/home.css">
 
-  <script defer src="./js/script.js"></script>
+  <script defer src="../js/script.js"></script>
   <script defer src="https://kit.fontawesome.com/bb88c945f0.js" crossorigin="anonymous"></script>
 
 </head>
@@ -41,8 +41,7 @@
 
   <main>
     <section class="search-results">
-      <h3 class="search-results">
-      </h3>
+      <h3 class="search-results"></h3>
         <button class="close-search-results"><i class="fa-regular fa-circle-xmark fa-xl"></i></button>
         <div class="search-results"></div>
     </section>
