--- a/pages/controlling-communication.html
+++ b/pages/controlling-communication.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../styles/default.css">
     <link rel="stylesheet" type="text/css" href="../styles/article.css">
-    <link rel="stylesheet" type="text/css" href="../styles/agile-adaptive-environment.css" <script defer
-        src="../js/script.js">
+    <link rel="stylesheet" type="text/css" href="../styles/agile-adaptive-environment.css">
+    <script defer src="../js/script.js">
     </script>
     <script defer src="https://kit.fontawesome.com/bb88c945f0.js" crossorigin="anonymous"></script>
 </head>
