--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="./styles/default.css">
   <link rel="stylesheet" type="text/css" href="./styles/home.css">
 
-  <script defer src="../js/script.js"></script>
+  <script defer src="./js/script.js"></script>
   <script defer src="https://kit.fontawesome.com/bb88c945f0.js" crossorigin="anonymous"></script>
 
 </head>
